--- a/zeebe-operate-k8s-helm/templates/tests/test-connection.yaml
+++ b/zeebe-operate-k8s-helm/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "zeebe-operate-k8s-helm.fullname" . }}:{{ .Values.service.http.port }}']
+      args:  ['{{ include "zeebe-operate-k8s-helm.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
