--- a/zeebe-operate-k8s-helm/templates/service.yml
+++ b/zeebe-operate-k8s-helm/templates/service.yml
@@ -5,8 +5,9 @@ metadata:
   labels:
     app: operate
 spec:
+  type: {{ .Values.service.type }}
   ports:
-  - port: 80
+  - port: {{ .Values.service.port }}
     name: http
     targetPort: 8080
     protocol: TCP
