--- a/zeebe-operate-k8s-helm/templates/configmap.yaml
+++ b/zeebe-operate-k8s-helm/templates/configmap.yaml
@@ -11,7 +11,7 @@ data:
         # Cluster name
         clusterName: elasticsearch
         # Host
-        host: elasticsearch
+        host: elasticsearch-master
         # Transport port
         port: 9200
       # Zeebe instance
@@ -23,7 +23,7 @@ data:
         # Cluster name
         clusterName: elasticsearch
         # Host
-        host: elasticsearch
+        host: elasticsearch-master
         # Transport port
         port: 9200
         # Index prefix, configured in Zeebe Elasticsearch exporter
