--- a/zeebe-operate-k8s-helm/templates/configmap.yaml
+++ b/zeebe-operate-k8s-helm/templates/configmap.yaml
@@ -17,7 +17,7 @@ data:
       # Zeebe instance
       zeebe:
         # Broker contact point
-        brokerContactPoint: {{ .Values.zeebe }}:26500
+        brokerContactPoint: {{ tpl .Values.zeebe . }}:26500
       # ELS instance to export Zeebe data to
       zeebeElasticsearch:
         # Cluster name
